--- a/pico.html
+++ b/pico.html
@@ -1,30 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8">
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1"
-        />
+        >
         <meta
             name="color-scheme"
             content="light dark"
-        />
-        <title>Preview • Pico CSS</title>
-        <meta
-            name="description"
-            content="A pure HTML example, without dependencies."
-        />
-
+        >
         <link
             rel="stylesheet"
-            href="pico.min.css"
+            href="./pico.min.css"
         >
+        <title>Hello world!</title>
     </head>
 
     <body>
-        <article>I’m a card!</article>
+        <article aria-busy="true"></article>
     </body>
 
 </html>
